--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -388,6 +388,12 @@
     <Compile Include="Forms\InvestmentDecision\_embedIDOperationExecute.Designer.cs">
       <DependentUpon>_embedIDOperationExecute.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InvestorStudio\FrmHomePageAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestorStudio\FrmHomePageAdmin.Designer.cs">
+      <DependentUpon>FrmHomePageAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Market\FrmIndexTrend5M.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1204,6 +1210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_embedIDOperationDetail.resx">
       <DependentUpon>_embedIDOperationDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestorStudio\FrmHomePageAdmin.resx">
+      <DependentUpon>FrmHomePageAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MarginTrading\FrmUserMarginTrading.resx">
       <DependentUpon>FrmUserMarginTrading.cs</DependentUpon>
