--- a/src/IndexAmountChart/IndexAmountChart.csproj
+++ b/src/IndexAmountChart/IndexAmountChart.csproj
@@ -46,6 +46,7 @@
     <Reference Include="DevExpress.XtraPrinting.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,8 +64,15 @@
     <Compile Include="Amount_5M.Designer.cs">
       <DependentUpon>Amount_5M.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChartExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VolAmount_5M.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VolAmount_5M.Designer.cs">
+      <DependentUpon>VolAmount_5M.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Amount_5M.resx">
       <DependentUpon>Amount_5M.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VolAmount_5M.resx">
+      <DependentUpon>VolAmount_5M.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
